# chip8-emulator

./: .gitignore
chip8_engine/: Cargo.toml
chip8_engine/src/: lib.rs
desktop/: Cargo.toml
desktop-quicksilver/: Cargo.toml
desktop/src/: main.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
web/: index.js  wasm.js  wasm_bg.wasm
