[package]
name = "wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
chip8_engine = { path = "../chip8_engine" }
js-sys = "^0.3.77"
wasm-bindgen = "^0.2.100"

[dependencies.web-sys]
version = "^0.3.46"
features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "ImageData",
    "KeyboardEvent",
    "Window"
]

[lib]
crate-type = ["cdylib"]
